<?xml version="1.0" encoding="utf-8"?>
<!--
LogCleaner - Helps you to save Internal Storage space deleting log folders
Copyright (C) 2014 Alessandro Garzaro

This program is free software: you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation, either version 3 of the License, or (at your option)
any later version.

This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
more details.

You should have received a copy of the GNU General Public License along with
this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CleanCommandActivity">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage"
        android:id="@+id/internalStorageTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp" />

    <ProgressBar
        style="@style/CustomProgressBarHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/internalStorageProgressBar"
        android:layout_below="@+id/internalStorageTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:progress="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage_used_space"
        android:id="@+id/internalStorageUsedSpaceLabel"
        android:layout_below="@+id/internalStorageProgressBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage_used_space_default_value"
        android:gravity="end"
        android:id="@+id/internalStorageUsedSpaceTextView"
        android:layout_below="@+id/internalStorageProgressBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="250px"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage_free_space"
        android:id="@+id/internalStorageFreeSpaceLabel"
        android:layout_below="@+id/internalStorageUsedSpaceTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage_free_space_default_value"
        android:gravity="end"
        android:id="@+id/internalStorageFreeSpaceTextView"
        android:layout_below="@+id/internalStorageUsedSpaceTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="250px"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i18n_internal_storage_soon_to_be_freed_space"
        android:id="@+id/internalStorageSoonToBeFreedSpaceLabel"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/internalStorageFreeSpaceTextView"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/i18n_internal_storage_soon_to_be_freed_space_default_value"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/logFileSizeText"
        android:layout_alignParentStart="true"
        android:textSize="24pt"
        android:layout_below="@+id/internalStorageSoonToBeFreedSpaceLabel"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:id="@+id/refreshBtn"
            android:src="@android:drawable/ic_menu_rotate"
            android:background="#ff65ccff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i18n_clean_button"
            android:id="@+id/cleanBtn"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:background="#ff65ccff" />

    </LinearLayout>



</RelativeLayout>
